custom login style

--- a/src/main/resources/org/apache/jetspeed/portlets/security/resources/LoginResources.properties
+++ b/src/main/resources/org/apache/jetspeed/portlets/security/resources/LoginResources.properties
@@ -40,3 +40,6 @@ login.label.ErrorCode.4=Invalid password.<br/>Warning: only one login attempt re
 login.label.ErrorCode.5=This user account its password is disabled.<br/>Please contact administration.
 # LoginConstants.ERROR_CREDENTIAL_EXPIRED
 login.label.ErrorCode.6=This user account its password is expired.<br/>Please contact administration.
+
+
+login.label.KeepMeSignedIn=Keep me signed in
