--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project basedir="." default="build">
+<project basedir="." default="build" name="J2 Admin">
 
 	<property name="server.home" value="D:\apache-tomcat-6.0.37" />
 	<property name="maven project" value="J2-Admin" />
